# OpenBar-server

./: .env  .env.dev  .env.dev.example  .env.example  .gitignore  README.md  docker-compose.example.test.yml  docker-compose.test.yml  docker-compose.ubar.test.yml  docker-compose.yml
database/: Dockerfile
database/docker-entrypoint-initdb.d/: 00-init-user-db.sh  99-flag-as-ready.sh
example/: Dockerfile  Dockerfile.test  README.md
example/app/: README.md  app.py  conftest.py  gunicorn.conf.py  requirements-test.txt  requirements.txt
example/example/: app.py  requirements-test.txt  (+1 more)
nginx/: default.conf
openbar/: Dockerfile  Dockerfile.test  README.md
openbar/app/: .coveragerc  .gitignore  app.py  config.py  docker-entrypoint-test.sh  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml
openbar/app/apis/: __init__.py  auth.py  order.py  recharge.py  role.py  user.py
openbar/app/models/: __init__.py  cardsalt.py  order.py  permission.py  recharge.py  role.py  user.py
openbar/app/models/migration/: MigrationHistory.py  __init__.py
openbar/app/schemas/: __init__.py  order.py  recharge.py  role.py  user.py
openbar/app/tools/: auth.py  crypto.py  db.py
tests/: Dockerfile  test_user.py
tests/app/: .dockerignore  conftest.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
tests/app/tests/example/: test_basic.py  test_db.py
tests/app/tests/openbar/: __init__.py  test_role.py
tests/app/tests/tools/: random.py  rest.py
tests/app/tests/user/: test_role.py
tests/app/tools/: random.py  rest.py
user/: Dockerfile  Dockerfile.test  README.md
(+116 files in other folders)
